fix drawer overflow issue

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -80,13 +80,13 @@
         }
 
         .left-drawer {
-          @apply translate-x-0;
+          transform: translateX(0);
         }
       }
 
       &[data-target="profileMenu"] {
         .right-drawer {
-          @apply translate-x-0;
+          transform: translateX(0);
         }
       }
     }
@@ -135,7 +135,8 @@
       }
 
       &.left-drawer {
-        @apply -translate-x-full left-0 rounded-r-2xl border-l-0;
+        @apply left-0 rounded-r-2xl border-l-0;
+        transform: translateX(-100%);
 
         @media (min-width: 768px) {
           @apply hidden;
@@ -143,11 +144,8 @@
       }
       
       &.right-drawer {
-        @apply translate-x-full right-0 max-w-120 z-20 rounded-l-2xl;
-
-        &.open {
-          @apply translate-x-0;
-        }
+        @apply right-0 max-w-120 z-20 rounded-l-2xl;
+        transform: translateX(100%);
       }
 
       &.desktop-menu {
